basic google map installation - IVOWWEB-415

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnZTW2im35N-H1J5Vrzkt7ZBJR2V887cQ">
+    </script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
   </body>
 </html>
