--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,43 @@
       }
 
       #map {
-        width: 1200px;
-        height: 400px;
+        width: 100%;
+        height: 500px;
       }
-
+      #map .ui-window-info {
+        text-align: left !important;
+      }
+      #map .ui-window-info .ui-window-title {
+        border-left: 2px solid #f9bb80 !important;
+        padding: 2px 0 2px 7px !important;
+        margin-bottom: 10px !important;
+        font-size: 14px !important;
+        color: white !important;
+        font-weight: bold;
+      }
+      #map .ui-window-desc {
+        margin-bottom: 8px !important;
+        font-size: 12px !important;
+        color: white !important;
+        opacity: 0.6 !important;
+      }
+      #map .gm-style-iw.gm-style-iw-c {
+        max-width: 300px !important;
+        padding: 14px !important;
+        background: #f58f2c !important;
+      }
+      #map .gm-style-iw-d {
+        overflow-y: auto !important;
+      }
+      #map .gm-style .gm-style-iw-t::after {
+        width: 20px !important;
+        height: 20px !important;
+        background: #f58f2c !important;
+      }
+      #map .gm-ui-hover-effect {
+        top: 0 !important;
+        right: 0 !important;
+      }
 /* Google Map Marker End*/
 
     </style>
