--- a/public/index.html
+++ b/public/index.html
@@ -63,19 +63,65 @@
       #map .gm-style-iw.gm-style-iw-c {
         max-width: 300px !important;
         padding: 14px !important;
-        background: #f58f2c !important;
       }
       #map .gm-style-iw-d {
         overflow-y: auto !important;
       }
-      #map .gm-style .gm-style-iw-t::after {
+      #map .gm-style-iw-t::after {
         width: 20px !important;
         height: 20px !important;
-        background: #f58f2c !important;
       }
       #map .gm-ui-hover-effect {
         top: 0 !important;
         right: 0 !important;
+      }
+      #map .holiday .gm-style-iw.gm-style-iw-c {
+        background: #2dd351 !important;
+      }
+      #map .holiday .gm-style-iw-t::after {
+        background: #f58f2c !important;
+      }
+      #map .sports .gm-style-iw.gm-style-iw-c {
+        background: #5cb2eb !important;
+      }
+      #map .sports .gm-style-iw-t::after {
+        background: #5cb2eb !important;
+      }
+      #map .festival .gm-style-iw.gm-style-iw-c {
+        background: #f58f2c !important;
+      }
+      #map .festival .gm-style-iw-t::after {
+        background: #f58f2c !important;
+      }
+      #map .music .gm-style-iw.gm-style-iw-c {
+        background: #ffe200 !important;
+      }
+      #map .music .gm-style-iw-t::after {
+        background: #ffe200 !important;
+      }
+      #map .food .gm-style-iw.gm-style-iw-c {
+        background: #74d5bd !important;
+      }
+      #map .food .gm-style-iw-t::after {
+        background: #74d5bd !important;
+      }
+      #map .art .gm-style-iw.gm-style-iw-c {
+        background: #f3aaf8 !important;
+      }
+      #map .art .gm-style-iw-t::after {
+        background: #f3aaf8 !important;
+      }
+      #map .dance .gm-style-iw.gm-style-iw-c {
+        background: #c604d6 !important;
+      }
+      #map .dance .gm-style-iw-t::after {
+        background: #c604d6 !important;
+      }
+      #map .others .gm-style-iw.gm-style-iw-c {
+        background: #847de3 !important;
+      }
+      #map .others .gm-style-iw-t::after {
+        background: #847de3 !important;
       }
 /* Google Map Marker End*/
 
