--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
     <title>IVOW</title>
     <style>
       
-/* Google Map Marker Start*/
-#map-container {
+      /* Google Map Marker Start*/
+      #map-container {
         padding: 6px;
         border-width: 1px;
         border-style: solid;
@@ -47,17 +47,17 @@
         text-align: left !important;
       }
       #map .ui-window-info .ui-window-title {
-        border-left: 2px solid #f9bb80 !important;
+        border-left: 2px solid black !important;
         padding: 2px 0 2px 7px !important;
         margin-bottom: 10px !important;
         font-size: 14px !important;
-        color: white !important;
+        color: black !important;
         font-weight: bold;
       }
       #map .ui-window-desc {
         margin-bottom: 8px !important;
         font-size: 12px !important;
-        color: white !important;
+        color: black !important;
         opacity: 0.6 !important;
       }
       #map .gm-style-iw.gm-style-iw-c {
@@ -70,12 +70,13 @@
       #map .gm-style-iw-t::after {
         width: 20px !important;
         height: 20px !important;
+        box-shadow: none !important;
       }
       #map .gm-ui-hover-effect {
         top: 0 !important;
         right: 0 !important;
       }
-      #map .holiday .gm-style-iw.gm-style-iw-c {
+      /* #map .holiday .gm-style-iw.gm-style-iw-c {
         background: #2dd351 !important;
       }
       #map .holiday .gm-style-iw-t::after {
@@ -122,7 +123,7 @@
       }
       #map .others .gm-style-iw-t::after {
         background: #847de3 !important;
-      }
+      } */
 /* Google Map Marker End*/
 
     </style>
