Resolve font family issue

--- a/public/index.html
+++ b/public/index.html
@@ -53,16 +53,19 @@
         font-size: 14px !important;
         color: black !important;
         font-weight: bold;
+        font-family: 'source_sans_probold' !important;
       }
       #map .ui-window-desc {
         margin-bottom: 8px !important;
         font-size: 12px !important;
         color: black !important;
         opacity: 0.6 !important;
+        font-family: 'source_sans_proregular' !important;
       }
       #map .gm-style-iw.gm-style-iw-c {
         max-width: 300px !important;
         padding: 14px !important;
+        border-radius: 10px !important;
       }
       #map .gm-style-iw-d {
         overflow-y: auto !important;
@@ -75,6 +78,9 @@
       #map .gm-ui-hover-effect {
         top: 0 !important;
         right: 0 !important;
+      }
+      #map .fc-location-icon {
+        padding-right: 7px !important
       }
       /* #map .holiday .gm-style-iw.gm-style-iw-c {
         background: #2dd351 !important;
